fix: floating msg 가 visible 됐을때 버튼과의 간격이 벌어지는 현상 수정

--- a/src/routes/Login/login.module.scss
+++ b/src/routes/Login/login.module.scss
@@ -59,7 +59,7 @@
     .extraFeaturesWrapper {
       display: flex;
       justify-content: space-between;
-      margin-top: 10px;
+      margin: 10px 0 15px;
       font-size: 12px;
 
       label {
@@ -81,16 +81,17 @@
     }
 
     .floatingMsg {
-      margin-top: 20px;
+      height: 16px;
       font-size: 12px;
       font-weight: 500;
+      line-height: 16px;
       color: rgb(241, 31, 31);
     }
 
     .loginBtn {
       width: 100%;
       height: 2.3rem;
-      margin-top: 40px;
+      margin-top: 15px;
       font-weight: 500;
       color: rgb(255, 255, 255);
       background-color: colors.$SIGNATURE_COLOR;
@@ -103,7 +104,7 @@
     }
 
     .hidden {
-      display: none;
+      visibility: hidden;
     }
   }
 
